# rag_system

./: Dockerfile  LICENSE  docker-compose.yaml  pyproject.toml
app/: main.py
app/ai_model/: rag_model.py  vectorstore.py
app/api/: chat.py
app/common/: exceptions.py  prompts.py  websocket_manager.py
app/core/: config.py
app/dependencies/: containers.py
app/handlers/: chat_handler.py
app/utils/: docs_loader.py  docs_splitter.py
